[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zzzeeksphinx"
dynamic = ["version"]
description = "Zzzeek's Sphinx Layout and Utilities."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Mike Bayer", email = "mike@zzzcomputing.com" },
]
keywords = [
    "Sphinx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]
dependencies = [
    "libsass",
    "mako",
    "requests",
    "sphinx>=8.2,<8.3",
    "sphinxcontrib-jquery",
]

[project.entry-points."pygments.lexers"]
"pycon+sql" = "zzzeeksphinx.sqlformatter:PyConWithSQLLexer"
"python+sql" = "zzzeeksphinx.sqlformatter:PythonWithSQLLexer"

[project.entry-points."sphinx.html_themes"]
zsbase = "zzzeeksphinx.theme"
zsmako = "zzzeeksphinx.theme"
zzzeeksphinx = "zzzeeksphinx.theme"

[project.urls]
Homepage = "https://github.com/sqlalchemyorg/zzzeeksphinx"

[tool.hatch.version]
path = "zzzeeksphinx/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/zzzeeksphinx",
]

[tool.black]
line-length = 79
